plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.8'
    id 'io.spring.dependency-management' version "1.0.15.RELEASE"
    }
group 'org.vdoloka'
version '1.0-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
repositories {
    mavenCentral()
}

dependencies {

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.17.6'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.postgresql:postgresql:42.5.1'
    implementation 'org.flywaydb:flyway-core:9.10.1'
    implementation 'com.github.librepdf:openpdf:1.3.30'
    implementation 'org.apache.poi:poi-ooxml:5.2.3'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
    implementation 'io.jsonwebtoken:jjwt:0.2'
    implementation 'javax.xml.bind:jaxb-api:2.2.4'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
    compileOnly 'org.mapstruct:mapstruct-processor:1.5.3.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'

    testImplementation 'com.h2database:h2:2.1.214'
    testImplementation 'io.rest-assured:rest-assured:5.3.0'
    testImplementation 'io.rest-assured:xml-path:5.3.0'
    testImplementation 'io.rest-assured:json-path:5.3.0'
    testImplementation 'io.rest-assured:spring-mock-mvc:5.3.0'
}
bootJar {
    manifest {
        attributes 'Start-Class': 'org.vdoloka.ProjectMain'
        mainClass = 'org.vdoloka.ProjectMain'
    }
}
tasks.named("bootJar") {
    mainClass = 'org.vdoloka.ProjectMain'
}
springBoot {
    mainClass = 'org.vdoloka.ProjectMain'
}

tasks.named('test') {
    useJUnitPlatform()
}
tasks.named("bootJar") {
    archiveClassifier = 'boot'
}

tasks.named("jar") {
    archiveClassifier = ''
}
tasks.named("bootJar") {
    launchScript()
}

tasks.withType(Copy).all { duplicatesStrategy 'exclude' }